# SwiftySyncServer

./: .gitignore  .gitmodules  CMakeLists.txt  SwiftySync.sln  SwiftySync.vcxproj  SwiftySync.vcxproj.filters  SwiftySyncServer.cpp  SwiftySyncServer.h  certificate-private-key.pem  certificate.pem  main.cpp  vcpkg.json
SwiftySync/: SwiftySync.h  SwiftySync.sln  SwiftySync.vcxproj  SwiftySync.vcxproj.filters  main.cpp
SwiftySync/SwiftySync/: SwiftySync.h  SwiftySync.vcxproj  SwiftySync.vcxproj.filters  main.cpp
SwiftySync/SwiftySync/authorization/: Authorization.h  FacebookAuthorization.h  GoogleAuthorization.h  googleAuth.py
SwiftySync/authorization/: GoogleAuthorization.h  googleAuth.py
SwiftySyncServer.xcodeproj/: project.pbxproj
SwiftySyncServer.xcodeproj/project.xcworkspace/xcuserdata/evgenij.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftySyncServer.xcodeproj/xcuserdata/evgenij.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: SwiftySyncServer.h  SwiftySyncServer.hpp
src/: .gitignore  SwiftySync.h  SwiftySyncServer.cpp  Usage.h  main.cpp
src/authorization/: Authorization.h  FacebookAuthorization.h  GoogleAuthorization.h
test/: test.cpp
